--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>untitled</module>
         <module>v6</module>
         <module>TEXT</module>
+        <module>V7</module>
     </modules>
     <properties>
         <!-- 设置 JDK 版本为 1.8 -->
