--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>v6</module>
         <module>TEXT</module>
         <module>V7</module>
+        <module>V8</module>
     </modules>
     <properties>
         <!-- 设置 JDK 版本为 1.8 -->
